# tonic-web-demo

./: README.md
client/: README.md  package-lock.json  package.json
client/src/: App.tsx  AuditLog.tsx  ProductList.tsx  index.tsx
client/src/pb/: ProductsServiceClientPb.ts  audit_log_pb.d.ts  audit_log_pb.js  products_pb.d.ts  products_pb.js
proto/: Cargo.toml
proto/proto/: audit_log.proto  products.proto
server/: Cargo.toml
server/src/: audit_log.rs  lib.rs  main.rs  products.rs
server/src/pb/: products.rs
