[package]
name = "server"
version = "0.1.0"
authors = ["Juan Alvarez <j@yabit.io>"]
edition = "2018"

[dependencies]
tonic = { git = "https://github.com/alce/tonic.git", branch = "grpc-web" }
tonic-grpc-web = { git = "https://github.com/alce/tonic.git", branch = "grpc-web" }
tokio = { version = "0.2.22", features = ["full"] }
prost = "0.6.1"
futures-util = "0.3.5"
uuid = { version = "0.8.1", features = ["v4"] }
